<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    tools:context=".DangNhapDangKy.DangKy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_full_name"
            android:textSize="20sp"
            android:textColor="@color/textColor"/>

        <EditText
            android:id="@+id/hoTen"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_full_name"
            android:backgroundTint="@color/frame"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_phone"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sDT"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_phone"
            android:backgroundTint="@color/frame"
            android:inputType="phone"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_country"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quocGia"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_country"
            android:backgroundTint="@color/frame"
            android:inputType="textPostalAddress|textMultiLine"
            android:minHeight="48dp"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_email"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_email"
            android:backgroundTint="@color/frame"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_password"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/matKhau"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_password"
            android:backgroundTint="@color/frame"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_confirm_password"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nhapLaiMK"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_rect02"
            android:textColor="@color/textColor"
            android:hint="@string/hint_confirm_password"
            android:backgroundTint="@color/frame"
            android:inputType="textPassword"
            android:padding="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/textColor"
        android:text="@string/btn_register"
        android:textSize="20sp" />

</LinearLayout>