<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_current_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_confirm_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_password"
        android:layout_marginTop="24dp"
        android:textColor="@color/textColor"/>
</LinearLayout>