<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".DangNhapDangKy.QuenMK">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:src="@drawable/lock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quen_mk"
        android:textColor="@color/textColor"
        android:textSize="40dp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/thong_bao"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:backgroundTint="@color/frame"
        android:elevation="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/btnLogin2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_blue"
        android:text="@string/gui_yc"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_quay_lai"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

</LinearLayout>