<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/qlchitieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#A3D3FB"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/title_quan_ly_chi_tieu"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/money2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:hint="@string/hint_email"
        android:backgroundTint="@color/frame"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorGray01" />

    <EditText
        android:id="@+id/matKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:hint="@string/hint_password"
        android:backgroundTint="@color/frame"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorGray01" />

    <TextView
        android:id="@+id/quenMK"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/matKhau"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/textColor"
        android:text="@string/register"
        android:textSize="20sp" />

</LinearLayout>
